--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.6",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.25",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.15",
-    "next": "16.0.6",
+    "lucide-react": "^0.555.0",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
