--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
-    "next": "^16.0.7",
+    "next": "15.1.4",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -34,5 +34,8 @@
   },
   "engines": {
     "node": ">=20 <22"
+  },
+  "optionalDependencies": {
+    "lightningcss-linux-x64-gnu": "1.30.2"
   }
 }
