--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "zenithcode-portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_DISABLE_TURBOPACK=1 next build",
-    "start": "next start",
+    "build": "next build",
     "lint": "eslint"
   },
   "dependencies": {
@@ -18,18 +20,19 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
-    "next": "^16.0.7",
+    "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
